--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>AirBnB clone</title>
@@ -7,7 +7,7 @@
 
     <body style="margin: 0px; padding: 0px;">
         <header style="background-color: #ff0000; height: 70px; width: 100%;">
-        </header>      
+        </header>
         <footer style="background-color: #00ff00; height: 60px; width: 100%; position: absolute; bottom: 0px;">
             <p style="text-align: center; margin-top: 1.25em;">Holberton School</p>
         </footer>
