--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>AirBnB clone</title>
@@ -13,7 +13,7 @@
         <header>
         </header>
         <footer>
-            <p>Holberton School</p>           
+            <p>Holberton School</p>
         </footer>
     </body>
 </html>
